--- a/QuizGame/end.html
+++ b/QuizGame/end.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="container">
+        <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div>
         <div id="end" class="flex-center flex-column">
             <h1 id="finalScore"></h1>
             <form>
