--- a/QuizGame/game.html
+++ b/QuizGame/game.html
@@ -14,7 +14,7 @@
 
 <body>
     <main id="container">
-        <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div>
+        <!-- <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div> -->
         <div class="col-12 index-height">
             <div id="game" class="flex-center flex-column col-10 index-box-content">
                 <div id="hud">
