--- a/QuizGame/index.html
+++ b/QuizGame/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <main id="container">
-        <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div>
+        <!-- <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div> -->
         <div class="col-12 index-height">
             <div id="home" class="flex-center flex-column col-8 index-box-content">
                 <h1 class="h1">Quiz Game</h1>
@@ -21,7 +21,7 @@
                 <a class="btn" href="highscores.html">High Scores</a>
             </div>
         </div>
-        <div>&copy; 2020</div>
+
     </main>
 </body>
 
