--- a/QuizGame/highscores.html
+++ b/QuizGame/highscores.html
@@ -14,7 +14,7 @@
 
 <body>
     <main id="container">
-        <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div>
+        <!-- <div> <a href="https://twitter.com/IamoluwaJay" class="dev">DevlopedBy-Jay</a></div> -->
         <div class="col-12 index-height">
             <div id="highScore" class="flex-center flex-column">
                 <h1 id="finalScore" class="h11">High Scores</h1>
